src/test/ui/issues/issue-34255-1.stderr
error: expected type, found `42`
  --> $DIR/issue-34255-1.rs:8:24
   |
LL |     Test::Drill(field: 42);
   |                        ^^ expecting a type here because of type ascription
   |
   = note: #![feature(type_ascription)] lets you annotate an expression with a type: `<expr>: <type>`
note: this expression expects an ascribed type after the colon
  --> $DIR/issue-34255-1.rs:8:17
   |
LL |     Test::Drill(field: 42);
   |                 ^^^^^
   = help: this might be indicative of a syntax error elsewhere

error: aborting due to previous error

